# laragu

./: .gitignore  CMakeLists.txt  README.md  Readme.md
include/: interaction_edges.h  option.h  store_seqs.h  struct_align.h  top_data_struct.h  vienna_rna.h
include/seqan/rna_io/: bpseq_read_write.h  connect_read_write.h  dot_bracket_read_write.h  rna_record.h  stockholm_read_write.h
src/: laragu.cpp
